// Vitest Snapshot v1

exports[`Shogi vs Go > can move 1`] = `
ban:
(1) yn1 aa1 
1yn1yn1yn1yn1ah1yn1yn1yn1yn
___1yn_______________1yn___
1yn1yn1yn1yn1yn1yn1yn1yn1yn
___1yn___1yn_______________
______1yn__________________
___________________________
0aa0aa___0aa0aa0aa0aa0aa0aa
___0af_______________0ag___
0ab0ac0ad0ae0ah0ae0ad0ac0ab
(0) 
kifu:
☗7六歩 [0,[7,6,[],[0,"aa"]],[7,7,[0,"aa"],[]]]
☖8四○ [1,[8,4,[],[1,"yn"]]]
☗7五歩 [0,[7,5,[],[0,"aa"]],[7,6,[0,"aa"],[]]]
☖6四○ [1,[6,4,[],[1,"yn"]]]
☗7四歩 [0,[7,4,[],[0,"aa"]],[7,5,[0,"aa"],[]]]
☖7五○ [1,[7,5,[],[1,"yn"]],[7,4,[0,"aa"],[]],[1,1,"aa"]]
{
  "version": "0.0",
  "status": {
    "num": 1
  },
  "ruleid": 104,
  "teban": 0,
  "turn": 0,
  "date": {},
  "moving": null
}
`;

exports[`Shogi vs Go > can move 2`] = `
ban:
(1) yn1 
1yn1yn1yn1yn1ah1yn1yn1yn1yn
___1yn___1yn___1aa___1yn___
1yn1yn1yn1yn1yn1yn0am1yn1yn
___1yn___1yn_______________
______1yn__________________
___________________________
0aa0aa___0aa0aa0aa0aa0aa0aa
_____________________0ag___
0ab0ac0ad0ae0ah0ae0ad0ac0ab
(0) 
kifu:
☗7六歩 [0,[7,6,[],[0,"aa"]],[7,7,[0,"aa"],[]]]
☖8四○ [1,[8,4,[],[1,"yn"]]]
☗7五歩 [0,[7,5,[],[0,"aa"]],[7,6,[0,"aa"],[]]]
☖6四○ [1,[6,4,[],[1,"yn"]]]
☗7四歩 [0,[7,4,[],[0,"aa"]],[7,5,[0,"aa"],[]]]
☖7五○ [1,[7,5,[],[1,"yn"]],[7,4,[0,"aa"],[]],[1,1,"aa"]]
☗3三角成 [0,[3,3,[1,"yn"],[0,"am"]],[8,8,[0,"af"],[]],[1,0,"yn"]]
☖4二歩 [1,[4,2,[],[1,"aa"]],[-1,1,"aa"]]
☗6二○ [0,[6,2,[],[1,"yn"]],[-1,0,"yn"]]
{
  "version": "0.0",
  "status": {
    "num": 1
  },
  "ruleid": 104,
  "teban": 1,
  "turn": 0,
  "date": {},
  "moving": null
}
`;
